// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture basic-turn reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "cwd": "/Users/jesse/prime-radiant/toil-suite/serf",
  "gitBranch": undefined,
  "goal": null,
  "lastFrameAt": 1006,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "Auth files",
  "olderCursor": undefined,
  "pendingEscalations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_1001",
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_1001",
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:12.000Z",
      "cost": undefined,
      "durationMs": 11000,
      "error": undefined,
      "id": "turn_1000",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "error": undefined,
          "exitCode": undefined,
          "id": "item_1000a",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "text": "What files handle auth?",
          "toolName": undefined,
          "turnId": "turn_1000",
          "type": "userMessage",
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "error": undefined,
          "exitCode": undefined,
          "id": "item_1000b",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "text": "auth/auth.go and identifier/ handle authentication.",
          "toolName": undefined,
          "turnId": "turn_1000",
          "type": "agentMessage",
        },
      ],
      "startedAt": "1970-01-01T00:00:01.000Z",
      "status": "completed",
      "usage": undefined,
    },
    {
      "completedAt": "1970-01-01T00:00:21.000Z",
      "cost": undefined,
      "durationMs": 1000,
      "error": undefined,
      "id": "turn_1001",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:21.000Z",
          "error": undefined,
          "exitCode": undefined,
          "id": "item_1001a",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": "1970-01-01T00:00:20.100Z",
          "status": "completed",
          "text": "Hello, world!",
          "toolName": undefined,
          "turnId": "turn_1001",
          "type": "agentMessage",
        },
      ],
      "startedAt": "1970-01-01T00:00:20.000Z",
      "status": "completed",
      "usage": undefined,
    },
  ],
  "usage": null,
  "workMillis": 0,
}
`;

exports[`fixture queue-and-status reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "cwd": "/Users/jesse/prime-radiant/toil-suite/serf",
  "gitBranch": undefined,
  "goal": null,
  "lastFrameAt": 1004,
  "model": "claude-opus-4-1",
  "modelProvider": "anthropic",
  "name": "Refactor plan v2",
  "olderCursor": undefined,
  "pendingEscalations": [],
  "projectPath": undefined,
  "queue": {
    "depth": 2,
    "ids": [
      "q1",
      "q2",
    ],
    "preview": [
      "Fix the lint errors",
      "Update the README",
    ],
    "texts": [
      "Fix the lint errors in server/",
      "Update the README with the new setup steps",
    ],
  },
  "reasoningEffort": "medium",
  "reasoningEffortLevels": [
    "low",
    "medium",
    "high",
  ],
  "ref": "ref_4001",
  "status": {
    "type": "active",
  },
  "supportsReasoning": true,
  "tasks": {
    "done": 2,
    "total": 5,
  },
  "threadId": "thr_4001",
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:09.000Z",
      "cost": undefined,
      "durationMs": 8000,
      "error": undefined,
      "id": "turn_4000",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "error": undefined,
          "exitCode": undefined,
          "id": "item_4000a",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "text": "Draft a refactor plan for the queue module.",
          "toolName": undefined,
          "turnId": "turn_4000",
          "type": "userMessage",
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": undefined,
          "error": undefined,
          "exitCode": undefined,
          "id": "item_4000b",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": undefined,
          "status": "completed",
          "text": "Here is a three-step plan.",
          "toolName": undefined,
          "turnId": "turn_4000",
          "type": "agentMessage",
        },
      ],
      "startedAt": "1970-01-01T00:00:01.000Z",
      "status": "completed",
      "usage": undefined,
    },
  ],
  "usage": null,
  "workMillis": 0,
}
`;

exports[`fixture streaming-with-reset reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "cwd": "/Users/jesse/prime-radiant/toil-suite/serf",
  "gitBranch": undefined,
  "goal": null,
  "lastFrameAt": 1014,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "",
  "olderCursor": undefined,
  "pendingEscalations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_2001",
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_2001",
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:03.200Z",
      "cost": undefined,
      "durationMs": 1200,
      "error": undefined,
      "id": "turn_2001",
      "items": [
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:02.500Z",
          "error": undefined,
          "exitCode": undefined,
          "id": "item_2001r",
          "images": undefined,
          "observedCompletedAt": "1970-01-01T00:00:01.005Z",
          "observedStartedAt": "1970-01-01T00:00:01.002Z",
          "output": undefined,
          "outputImages": undefined,
          "reasoningSummaries": [
            [
              "Weighing approach A",
              " vs approach B.",
            ],
            [
              "Double-checking the math.",
            ],
          ],
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.000Z",
          "status": "completed",
          "text": "",
          "toolName": undefined,
          "turnId": "turn_2001",
          "type": "reasoning",
        },
        {
          "argumentsJSON": undefined,
          "callId": undefined,
          "completedAt": "1970-01-01T00:00:03.200Z",
          "error": undefined,
          "exitCode": undefined,
          "id": "item_2001b",
          "images": undefined,
          "output": undefined,
          "outputImages": undefined,
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.600Z",
          "status": "completed",
          "text": "After double-checking, the answer is 42.",
          "toolName": undefined,
          "turnId": "turn_2001",
          "type": "agentMessage",
        },
      ],
      "startedAt": "1970-01-01T00:00:02.000Z",
      "status": "completed",
      "usage": undefined,
    },
  ],
  "usage": null,
  "workMillis": 0,
}
`;

exports[`fixture tool-and-jobs reduces to the expected model 1`] = `
{
  "activeTurnId": undefined,
  "activeTurnStartedAt": undefined,
  "askPending": false,
  "capabilities": {
    "changeModel": true,
    "clear": true,
    "compact": true,
    "forkFromTurn": true,
    "goal": true,
    "interrupt": true,
    "queue": true,
    "rename": true,
    "send": true,
    "shutdown": true,
    "steer": true,
  },
  "contextPressure": 0,
  "contextUsed": 0,
  "contextWindow": 0,
  "cost": null,
  "cwd": "/Users/jesse/prime-radiant/toil-suite/serf",
  "gitBranch": undefined,
  "goal": null,
  "lastFrameAt": 1008,
  "model": "anthropic/claude-sonnet-4-5",
  "modelProvider": "anthropic/claude-sonnet-4-5",
  "name": "",
  "olderCursor": undefined,
  "pendingEscalations": [],
  "projectPath": undefined,
  "queue": {},
  "reasoningEffort": undefined,
  "reasoningEffortLevels": [],
  "ref": "ref_3001",
  "status": {
    "type": "idle",
  },
  "supportsReasoning": false,
  "tasks": null,
  "threadId": "thr_3001",
  "turns": [
    {
      "completedAt": "1970-01-01T00:00:03.000Z",
      "cost": undefined,
      "durationMs": 1000,
      "error": undefined,
      "id": "turn_3001",
      "items": [
        {
          "argumentsJSON": "{"cmd":"go test ./..."}",
          "callId": "call_3001",
          "completedAt": "1970-01-01T00:00:03.000Z",
          "error": undefined,
          "exitCode": undefined,
          "id": "item_3001t",
          "images": undefined,
          "output": "ok  	agent/...	0.4s
ok  	hubapi/...	0.2s
PASS
",
          "outputImages": undefined,
          "source": undefined,
          "startedAt": "1970-01-01T00:00:02.000Z",
          "status": "completed",
          "text": "",
          "toolName": "run_tests",
          "turnId": "turn_3001",
          "type": "commandExecution",
        },
        {
          "id": "item_steering_live_turn_3001_0",
          "images": undefined,
          "source": undefined,
          "status": "completed",
          "text": "Please also check the lint output",
          "turnId": "turn_3001",
          "type": "steering",
        },
      ],
      "startedAt": "1970-01-01T00:00:02.000Z",
      "status": "completed",
      "usage": undefined,
    },
  ],
  "usage": null,
  "workMillis": 0,
}
`;
